# sovereignBank

./: .gitignore  README.md  pyproject.toml  smb.sspec  spec.md
.sovereignspec/docs/sovereign-memory-bank/: specification.md
.sovereignspec/specs/: sovereign-memory-bank.sspec
.sovereignspec/tasks/: sovereign-memory-bank-tasks.md
memory-bank/: metadata.db
memory-bank/layer-1/concepts/: 229e0621f69b.md  6f3d35ece435.md
memory-bank/vectors/: chroma.sqlite3
src/sovereign_memory_bank/: __init__.py  cli.py  config.py
src/sovereign_memory_bank/api/: app.py
src/sovereign_memory_bank/api/routes/: graph.py  hybrid.py  memory.py  search.py
src/sovereign_memory_bank/evolution/: abstraction.py  contradiction_detector.py  dedup.py  engine.py  splitter.py  synthesis.py
src/sovereign_memory_bank/graph/: graph_store.py
src/sovereign_memory_bank/ingestion/: embedder.py  extractor.py  graph_builder.py  ingester.py
src/sovereign_memory_bank/layers/: layer0.py  layer1.py  layer2.py  layer3.py  layer4.py  layer5.py  layer6.py  layer_manager.py
src/sovereign_memory_bank/models/: __init__.py  enums.py  memory_object.py
src/sovereign_memory_bank/storage/: markdown_store.py  sqlite_store.py  vector_store.py
tests/: test_agent_interface.py  test_contradictions.py  test_evolution.py  test_graph.py  test_ingestion.py  test_models.py  test_storage.py
